TypeChecker/test_cases/bad/bad-self-5.cl
class Main {
  main( ) : Object { 5 } ; 

  self : Int <- 3 ; 

  foo(x : Int, y : String) : Int { 5 } ; 
} ;

